--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "yarn run build; rm build -rf; mv dist build; gh-pages -d build"
   },
   "dependencies": {
+    "firebase": "^11.9.1",
     "gh-pages": "^6.3.0",
     "i18next": "^25.2.1",
     "lucide-react": "^0.344.0",
