--- a/package.json
+++ b/package.json
@@ -2,24 +2,19 @@
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://pbouchet3.github.io/portfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "yarn run build; rm build -rf; mv dist build; gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "firebase": "^11.9.1",
-    "gh-pages": "^6.3.0",
-    "i18next": "^25.2.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.5.2",
-    "react-router-dom": "^7.6.2"
+    "react-textarea-autosize": "^8.5.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
