--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "yarn run build; rm build -rf; mv dist build; gh-pages -d build"
+    "deploy": "yarn build && yarn gh-pages -d dist"
   },
   "dependencies": {
     "firebase": "^11.9.1",
@@ -16,7 +16,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-textarea-autosize": "^8.5.9"
+    "react-textarea-autosize": "^8.5.9",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
